# normalizor

./: .clang-tidy  .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt  normalizor.cpp  normalizor.h  normalizor.hpp  py_normalizor.cpp
tests/: CMakeLists.txt  test_normalizor.cpp  test_py_normalizor.py
tools/: CMakeLists.txt  testor.cpp
