cmake_minimum_required(VERSION 3.10)

set(CMAKE_CXX_STANDARD 17)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror")
if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
else()
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Weverything")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-c++98-compat")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-c++98-compat-pedantic")
endif()
if(NOT CMAKE_CXX_FLAGS_DEBUG MATCHES "-O")
  set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0")
endif()
if(NOT CMAKE_CXX_FLAGS_RELEASE MATCHES "-O")
  set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
endif()

include(GNUInstallDirs)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
find_package(Boost REQUIRED COMPONENTS filesystem program_options system python36)
FIND_LIBRARY(PYTHON_LIBRARY python PATHS /opt/pkg/Library/Frameworks/ NO_DEFAULT_PATH)
FIND_PATH(PYTHON_INCLUDE_DIRS python.h PATHS /opt/pkg/Library/Frameworks/Python.framework/Headers NO_DEFAULT_PATH)
find_package(GTest)

if (NOT PYTHON_LIBRARY)
  FIND_LIBRARY(PYTHON_LIBRARY python)
endif()
if (NOT PYTHON_INCLUDE_DIRS)
  FIND_PATH(PYTHON_INCLUDE_DIRS python.h)
endif()

subdirs(src)
if(GTEST_FOUND)
  enable_testing()
  subdirs(tests)
endif()
subdirs(tools)
